plang/testing/logs/false-incorrect/64/program64.p.p
u (kye (Hraxc) (MuKB6) pk ER).


qM7eI (vd) (SwA) spnTs :- k m, tA ih (vpNqG) IipM (snCmq (CTE) (lLW R6hZn (RN4)) NMt); lsPY (l5 uQcm) (B9Ioe) d e, ytC36 (a) i; (c1MM ylo (Ssjd); dDi o (jR7 (Ab) (AH) c P7) WCG), qvL, u (Ahqzq) F6; y6mY (zFiWd d WCL (nB80 (FQIV))); (e wsPf Gl).

l (PB) (rERJ (tI (QuK))) (OqZ7e).
gAv (R) (v (FDVTk) ul (xkZ5 SJT (tmgv7 At3gN O041) gjc)) (cwM NZzh (LK)) (n xhz).
lIlh Ni :- (cpHYQ l B G0gvs, zIUk aV (MP) PAQ; hk jt (fq Lm), dlt dK6 (J9yx) (Dv7D1) (f (PlQ) (kHz TGsY) h OswBV); nKT5 (v ukbK3), vE7E (u XK (wGbvX hv0D iSuI)) Ki; a YuL hM bj (hpSxV (Mb) (yLR0 (w) T) (dbYX (Kw1RY)))), ((yORmI (f (B9D) (OnhQ) (YZIe)) grTq); dRsl eO cLHp, mzHY (FCRk) (YkuG) (SvxcN), s; b (XbyWe); (zFQ AG0pF)).


a bIVi.

gvyMA (rj vP) ZTho (g ymeNJ MS zEb jmlI) stC.
b (GP) (Egeo) (mdWf (icqB (zTYWo h (m6 O)) (A1E)) (nxb (EB) (HTCy2) (PNMm)) Sbs wE) :- nLkFz Y.
? ajG BvR (TNB92) AyVh; r22i (UVLv) (AvQi), (ir sWt Cf Zw1 EcCV); sFb (heN2 (EBZrR)) T8sD5 VOj4; kAF X, n (Mz) (d (sz0di (Xx) KzJ)); h fa, aAHj; ((ontuj R (vqtm Ayu5j ye) RbdL (HOV), wdm (N))), ((kns QTo cFKHt Rmi Q; c9i6f zT7Sm A0Zx (Vtz))).

